--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="369" class="highlighted">
+            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="369" class="">
               <span class="toctext">Magnetic Force on Charged Particles</span>
             </a>
           </li>
@@ -702,17 +702,22 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414">
+            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414" class="">
               <span class="toctext">Magnetic Flux</span>
             </a>
           </li>
           <li>
-            <a href="#lenz-s-law" raw="## Lenz's Law" lo="428">
+            <a href="#lenz-s-law" raw="## Lenz's Law" lo="428" class="">
               <span class="toctext">Lenz’s Law</span>
             </a>
           </li>
           <li>
-            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="430">
+            <a href="#rl-circuits" raw="## RL Circuits" lo="430" class="highlighted">
+              <span class="toctext">RL Circuits</span>
+            </a>
+          </li>
+          <li>
+            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="432">
               <span class="toctext">RLC and AC Circuits</span>
             </a>
           </li>
@@ -1875,7 +1880,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="369" lf="369" class="highlighted"><a name="magnetic-force-on-charged-particles" number="4.19" lo="369" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
+        <h2 lo="369" lf="369" class=""><a name="magnetic-force-on-charged-particles" number="4.19" lo="369" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">369</span></div>
       </div>
       <div class="block">
@@ -1895,7 +1900,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="373" lf="377">
                   <div class="block">
-                    <p padlength="0" lo="373" lf="377" class="active">Documents: | <a href="Magnetic_Force/Magnetic_Force.pdf">pdf</a> | <a href="Magnetic_Force/Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force/Magnetic_Force.html">html</a> |</p>
+                    <p padlength="0" lo="373" lf="377">Documents: | <a href="Magnetic_Force/Magnetic_Force.pdf">pdf</a> | <a href="Magnetic_Force/Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force/Magnetic_Force.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
                   </div>
                 </li>
@@ -1989,21 +1994,21 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="414" lf="414"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
+        <h2 lo="414" lf="414" class=""><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">414</span></div>
       </div>
       <div class="block">
         <ul lo="416" lf="426" class="compact">
           <li markerlength="2" padlength="0" lo="416" lf="421">
             <div class="block">
-              <p padlength="0" lo="416" lf="416">Activity - Magnetic Flux</p>
+              <p padlength="0" lo="416" lf="416" class="">Activity - Magnetic Flux</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">416</span></div>
             </div>
             <div class="block">
               <ul lo="417" lf="421" class="compact">
                 <li markerlength="2" padlength="0" lo="417" lf="421">
                   <div class="block">
-                    <p padlength="0" lo="417" lf="421">Documents: | <a href="Magnetic_Flux/Magnetic_Flux.pdf">pdf</a> | <a href="Magnetic_Flux/Magnetic_Flux-solutions.pdf">pdf solns</a> | <a href="Magnetic_Flux/Magnetic_Flux.html">html</a> |</p>
+                    <p padlength="0" lo="417" lf="421" class="">Documents: | <a href="Magnetic_Flux/Magnetic_Flux.pdf">pdf</a> | <a href="Magnetic_Flux/Magnetic_Flux-solutions.pdf">pdf solns</a> | <a href="Magnetic_Flux/Magnetic_Flux.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">417-421</span></div>
                   </div>
                 </li>
@@ -2011,9 +2016,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">417-421</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="422" lf="428">
+          <li markerlength="2" padlength="0" lo="422" lf="428" class="">
             <div class="block">
-              <p padlength="0" lo="422" lf="426">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md!" target="_blank">Markdown</a> | </p>
+              <p padlength="0" lo="422" lf="426" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">422-426</span></div>
             </div>
           </li>
@@ -2023,14 +2028,48 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="428" lf="428"><a name="lenz-s-law" number="4.24" lo="428" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
+        <h2 lo="428" lf="428" class=""><a name="lenz-s-law" number="4.24" lo="428" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">428</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="430" lf="430"><a name="rlc-and-ac-circuits" number="4.25" lo="430" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <h2 lo="430" lf="430" class="highlighted"><a name="rl-circuits" number="4.25" lo="430" raw="## RL Circuits" class="anchor hanchor" href="#rl-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RL Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">430</span></div>
+      </div>
+      <div class="block">
+        <ul lo="432" lf="442" class="compact">
+          <li markerlength="2" padlength="0" lo="432" lf="437" class="">
+            <div class="block">
+              <p padlength="0" lo="432" lf="432" class="active">Activity - RL Charging and Discharging</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">432</span></div>
+            </div>
+            <div class="block">
+              <ul lo="433" lf="437" class="compact">
+                <li markerlength="2" padlength="0" lo="433" lf="437" class="">
+                  <div class="block">
+                    <p padlength="0" lo="433" lf="437" class="">Documents: | <a href="RL_Circuits/RL_Circuits.pdf">pdf</a> | <a href="RL_Circuits/RL_Circuits-solutions.pdf">pdf solns</a> | <a href="RL_Circuits/RL_Circuits.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">433-437</span></div>
+                  </div>
+                </li>
+              </ul>
+              <div class="block-info" style="display: none;"><span class="line-numbers">433-437</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="438" lf="442" class="">
+            <div class="block">
+              <p padlength="0" lo="438" lf="442" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RL_Circuits">Github</a> | <a href="Magnetic_Flux/RL_Circuits.md">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">438-442</span></div>
+            </div>
+          </li>
+        </ul>
+        <div class="block-info" style="display: none;"><span class="line-numbers">432-442</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="444" lf="444" class=""><a name="rlc-and-ac-circuits" number="4.26" lo="444" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits" lf="444"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">444</span></div>
       </div>
     </div>
   </div>
