--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#the-biot-savart-law" raw="## The Biot--Savart Law" lo="412">
+            <a href="#the-biot-savart-law" raw="## The Biot--Savart Law" lo="412" class="">
               <span class="toctext">The Biot–Savart Law</span>
             </a>
           </li>
@@ -712,7 +712,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#rl-circuits" raw="## RL Circuits" lo="430" class="highlighted">
+            <a href="#rl-circuits" raw="## RL Circuits" lo="430" class="">
               <span class="toctext">RL Circuits</span>
             </a>
           </li>
@@ -1988,7 +1988,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="412" lf="412"><a name="the-biot-savart-law" number="4.22" lo="412" raw="## The Biot--Savart Law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.22</span>&nbsp;<span class="htext">The Biot–Savart Law</span></a></h2>
+        <h2 lo="412" lf="412" class=""><a name="the-biot-savart-law" number="4.22" lo="412" raw="## The Biot--Savart Law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.22</span>&nbsp;<span class="htext">The Biot–Savart Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">412</span></div>
       </div>
     </div>
@@ -2034,14 +2034,14 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="430" lf="430" class="highlighted"><a name="rl-circuits" number="4.25" lo="430" raw="## RL Circuits" class="anchor hanchor" href="#rl-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RL Circuits</span></a></h2>
+        <h2 lo="430" lf="430" class=""><a name="rl-circuits" number="4.25" lo="430" raw="## RL Circuits" class="anchor hanchor" href="#rl-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RL Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">430</span></div>
       </div>
       <div class="block">
         <ul lo="432" lf="442" class="compact">
           <li markerlength="2" padlength="0" lo="432" lf="437" class="">
             <div class="block">
-              <p padlength="0" lo="432" lf="432" class="active">Activity - RL Charging and Discharging</p>
+              <p padlength="0" lo="432" lf="432" class="">Activity - RL Charging and Discharging</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">432</span></div>
             </div>
             <div class="block">
@@ -2068,7 +2068,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="444" lf="444" class=""><a name="rlc-and-ac-circuits" number="4.26" lo="444" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits" lf="444"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <h2 lo="444" lf="444" class="highlighted"><a name="rlc-and-ac-circuits" number="4.26" lo="444" raw="## RLC and AC Circuits" class="anchor hanchor active" href="#rlc-and-ac-circuits" lf="444"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">444</span></div>
       </div>
     </div>
