--- a/Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html
+++ b/Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#introduction" raw="# Introduction" lo="5">
+        <a href="#introduction" raw="# Introduction" lo="5" class="">
           <span class="toctext">Introduction</span>
         </a>
       </li>
@@ -571,12 +571,12 @@
         </a>
       </li>
       <li>
-        <a href="#problem-ii" raw="# Problem II" lo="100">
+        <a href="#problem-ii" raw="# Problem II" lo="100" class="highlighted">
           <span class="toctext">Problem II</span>
         </a>
       </li>
       <li>
-        <a href="#problem-iii" raw="# Problem III" lo="115" class="highlighted">
+        <a href="#problem-iii" raw="# Problem III" lo="115" class="">
           <span class="toctext">Problem III</span>
         </a>
       </li>
@@ -596,7 +596,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="5" lf="5"><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
+        <h1 lo="5" lf="5" class=""><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
@@ -1342,11 +1342,11 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="100" lf="100"><a name="problem-ii" number="4" lo="100" raw="# Problem II" class="anchor hanchor" href="#problem-ii"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem II</span></a></h1>
+        <h1 lo="100" lf="100" class="highlighted"><a name="problem-ii" number="4" lo="100" raw="# Problem II" class="anchor hanchor" href="#problem-ii"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem II</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">100</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="102" lf="102">If <span len="3" raw="_q_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span></span></span></span> is at <span len="13" raw="_(x,y)=(a,0)_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">x</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">y</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">a</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord">0</span><span class="mclose">)</span></span></span></span> and has a velocity of <span len="20" raw="_\bfvec{v}=v_o\jhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7274em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7274em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf" style="margin-right:0.01597em;">v</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.2077em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <p padlength="0" lo="102" lf="102" class="active">If <span len="3" raw="_q_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span></span></span></span> is at <span len="13" raw="_(x,y)=(a,0)_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">x</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">y</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">a</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord">0</span><span class="mclose">)</span></span></span></span> and has a velocity of <span len="20" raw="_\bfvec{v}=v_o\jhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7274em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7274em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf" style="margin-right:0.01597em;">v</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.2077em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                 <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -1362,7 +1362,7 @@ c-16-25.333-24-45-24-59z"></path>
 -7 1c-4.667 0-9.167-1.833-13.5-5.5S337 184 337 178c0-12.667 15.667-32.333 47-59
 H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
 c-16-25.333-24-45-24-59z"></path>
-                              </svg></span></span></span></span></span></span></span></span></span></span> vector at <span len="13" raw="_(x,y)=(a,a)_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">x</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">y</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">a</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">a</span><span class="mclose">)</span></span></span></span>.</p>
+                              </svg></span></span></span></span></span></span></span></span></span></span> at <span len="13" raw="_(x,y)=(a,a)_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">x</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">y</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">a</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">a</span><span class="mclose">)</span></span></span></span>.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">102</span></div>
       </div>
       <div class="block">
@@ -1418,7 +1418,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="115" lf="115" class="highlighted"><a name="problem-iii" number="5" lo="115" raw="# Problem III" class="anchor hanchor" href="#problem-iii"><span class="hnumber">5</span>&nbsp;<span class="htext">Problem III</span></a></h1>
+        <h1 lo="115" lf="115" class=""><a name="problem-iii" number="5" lo="115" raw="# Problem III" class="anchor hanchor" href="#problem-iii"><span class="hnumber">5</span>&nbsp;<span class="htext">Problem III</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">115</span></div>
       </div>
       <div class="block">
@@ -1482,7 +1482,7 @@ M834 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="126" lf="126" class="active"><a name="problem-iv" number="6" lo="126" raw="# Problem IV" class="anchor hanchor" href="#problem-iv"><span class="hnumber">6</span>&nbsp;<span class="htext">Problem IV</span></a></h1>
+        <h1 lo="126" lf="126" class=""><a name="problem-iv" number="6" lo="126" raw="# Problem IV" class="anchor hanchor" href="#problem-iv"><span class="hnumber">6</span>&nbsp;<span class="htext">Problem IV</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">126</span></div>
       </div>
       <div class="block">
