--- a/index.html
+++ b/index.html
@@ -428,8 +428,14 @@
         margin: 0.5in 0.75in 0.75in;
       }
 
-      .katex .hide-tail {
-        overflow: hidden !important;
+      body,
+      html {
+        margin: 0px;
+        padding: 0px;
+        color: rgb(0, 0, 0);
+        background-color: rgb(255, 255, 255);
+        overflow: auto;
+        display: inline;
       }
 
       .page-break {
@@ -503,6 +509,10 @@
         padding-right: 0px;
         border: none;
         overflow-wrap: break-word;
+      }
+
+      .katex .hide-tail {
+        overflow: hidden !important;
       }
 
       .katex {
@@ -682,7 +692,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="369" class="">
+            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="369">
               <span class="toctext">Magnetic Force on Charged Particles</span>
             </a>
           </li>
@@ -697,27 +707,27 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#the-biot-savart-law" raw="## The Biot--Savart Law" lo="412" class="">
+            <a href="#the-biot-savart-law" raw="## The Biot--Savart Law" lo="412">
               <span class="toctext">The Biot–Savart Law</span>
             </a>
           </li>
           <li>
-            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414" class="">
+            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414">
               <span class="toctext">Magnetic Flux</span>
             </a>
           </li>
           <li>
-            <a href="#lenz-s-law" raw="## Lenz's Law" lo="428" class="">
+            <a href="#lenz-s-law" raw="## Lenz's Law" lo="428">
               <span class="toctext">Lenz’s Law</span>
             </a>
           </li>
           <li>
-            <a href="#rl-circuits" raw="## RL Circuits" lo="430" class="">
+            <a href="#rl-circuits" raw="## RL Circuits" lo="442" class="highlighted">
               <span class="toctext">RL Circuits</span>
             </a>
           </li>
           <li>
-            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="432">
+            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="456">
               <span class="toctext">RLC and AC Circuits</span>
             </a>
           </li>
@@ -1880,7 +1890,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="369" lf="369" class=""><a name="magnetic-force-on-charged-particles" number="4.19" lo="369" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
+        <h2 lo="369" lf="369"><a name="magnetic-force-on-charged-particles" number="4.19" lo="369" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">369</span></div>
       </div>
       <div class="block">
@@ -1906,7 +1916,7 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="378" lf="384">
                   <div class="block">
-                    <p padlength="0" lo="378" lf="382" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="Magnetic_Force/Magnetic_Force.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="378" lf="382">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="Magnetic_Force/Magnetic_Force.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">378-382</span></div>
                   </div>
                 </li>
@@ -1988,27 +1998,27 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="412" lf="412" class=""><a name="the-biot-savart-law" number="4.22" lo="412" raw="## The Biot--Savart Law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.22</span>&nbsp;<span class="htext">The Biot–Savart Law</span></a></h2>
+        <h2 lo="412" lf="412"><a name="the-biot-savart-law" number="4.22" lo="412" raw="## The Biot--Savart Law" class="anchor hanchor" href="#the-biot-savart-law"><span class="hnumber">4.22</span>&nbsp;<span class="htext">The Biot–Savart Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">412</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="414" lf="414" class=""><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
+        <h2 lo="414" lf="414"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">414</span></div>
       </div>
       <div class="block">
         <ul lo="416" lf="426" class="compact">
           <li markerlength="2" padlength="0" lo="416" lf="421">
             <div class="block">
-              <p padlength="0" lo="416" lf="416" class="">Activity - Magnetic Flux</p>
+              <p padlength="0" lo="416" lf="416">Activity - Magnetic Flux</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">416</span></div>
             </div>
             <div class="block">
               <ul lo="417" lf="421" class="compact">
                 <li markerlength="2" padlength="0" lo="417" lf="421">
                   <div class="block">
-                    <p padlength="0" lo="417" lf="421" class="">Documents: | <a href="Magnetic_Flux/Magnetic_Flux.pdf">pdf</a> | <a href="Magnetic_Flux/Magnetic_Flux-solutions.pdf">pdf solns</a> | <a href="Magnetic_Flux/Magnetic_Flux.html">html</a> |</p>
+                    <p padlength="0" lo="417" lf="421">Documents: | <a href="Magnetic_Flux/Magnetic_Flux.pdf">pdf</a> | <a href="Magnetic_Flux/Magnetic_Flux-solutions.pdf">pdf solns</a> | <a href="Magnetic_Flux/Magnetic_Flux.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">417-421</span></div>
                   </div>
                 </li>
@@ -2016,9 +2026,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">417-421</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="422" lf="428" class="">
+          <li markerlength="2" padlength="0" lo="422" lf="428">
             <div class="block">
-              <p padlength="0" lo="422" lf="426" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md!" target="_blank">Markdown</a> | </p>
+              <p padlength="0" lo="422" lf="426">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">422-426</span></div>
             </div>
           </li>
@@ -2028,48 +2038,76 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="428" lf="428" class=""><a name="lenz-s-law" number="4.24" lo="428" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
+        <h2 lo="428" lf="428"><a name="lenz-s-law" number="4.24" lo="428" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">428</span></div>
       </div>
-    </div>
-    <div class="section">
       <div class="block">
-        <h2 lo="430" lf="430" class=""><a name="rl-circuits" number="4.25" lo="430" raw="## RL Circuits" class="anchor hanchor" href="#rl-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RL Circuits</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">430</span></div>
-      </div>
-      <div class="block">
-        <ul lo="432" lf="442" class="compact">
-          <li markerlength="2" padlength="0" lo="432" lf="437" class="">
+        <ul lo="430" lf="440" class="compact">
+          <li markerlength="2" padlength="0" lo="430" lf="435">
             <div class="block">
-              <p padlength="0" lo="432" lf="432" class="">Activity - RL Charging and Discharging</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">432</span></div>
+              <p padlength="0" lo="430" lf="430">Activity - Magnetic Flux</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">430</span></div>
             </div>
             <div class="block">
-              <ul lo="433" lf="437" class="compact">
-                <li markerlength="2" padlength="0" lo="433" lf="437" class="">
+              <ul lo="431" lf="435" class="compact">
+                <li markerlength="2" padlength="0" lo="431" lf="435">
                   <div class="block">
-                    <p padlength="0" lo="433" lf="437" class="">Documents: | <a href="RL_Circuits/RL_Circuits.pdf">pdf</a> | <a href="RL_Circuits/RL_Circuits-solutions.pdf">pdf solns</a> | <a href="RL_Circuits/RL_Circuits.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">433-437</span></div>
+                    <p padlength="0" lo="431" lf="435">Documents: | <a href="Lenzs_Law/Lenzs_Law.pdf">pdf</a> | <a href="Lenzs_Law/Lenzs_Law-solutions.pdf">pdf solns</a> | <a href="Lenzs_Law/Lenzs_Law.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">431-435</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">433-437</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">431-435</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="438" lf="442" class="">
+          <li markerlength="2" padlength="0" lo="436" lf="442">
             <div class="block">
-              <p padlength="0" lo="438" lf="442" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RL_Circuits">Github</a> | <a href="Magnetic_Flux/RL_Circuits.md">Markdown</a> | </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">438-442</span></div>
+              <p padlength="0" lo="436" lf="440">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Lenzs_Law">Github</a> | <a href="Lenzs_Law/Lenzs_Law.md!" target="_blank">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">436-440</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">432-442</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">430-440</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="444" lf="444" class="highlighted"><a name="rlc-and-ac-circuits" number="4.26" lo="444" raw="## RLC and AC Circuits" class="anchor hanchor active" href="#rlc-and-ac-circuits" lf="444"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">444</span></div>
+        <h2 lo="442" lf="442" class="highlighted"><a name="rl-circuits" number="4.25" lo="442" raw="## RL Circuits" class="anchor hanchor" href="#rl-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RL Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">442</span></div>
+      </div>
+      <div class="block">
+        <ul lo="444" lf="454" class="compact">
+          <li markerlength="2" padlength="0" lo="444" lf="449" class="">
+            <div class="block">
+              <p padlength="0" lo="444" lf="444" class="">Activity - RL Charging and Discharging</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">444</span></div>
+            </div>
+            <div class="block">
+              <ul lo="445" lf="449" class="compact">
+                <li markerlength="2" padlength="0" lo="445" lf="449" class="">
+                  <div class="block">
+                    <p padlength="0" lo="445" lf="449" class="">Documents: | <a href="RL_Circuits/RL_Circuits.pdf">pdf</a> | <a href="RL_Circuits/RL_Circuits-solutions.pdf">pdf solns</a> | <a href="RL_Circuits/RL_Circuits.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">445-449</span></div>
+                  </div>
+                </li>
+              </ul>
+              <div class="block-info" style="display: none;"><span class="line-numbers">445-449</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="450" lf="454" class="">
+            <div class="block">
+              <p padlength="0" lo="450" lf="454" class="active">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RL_Circuits">Github</a> | <a href="RL_Circuits/RL_Circuits.md">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">450-454</span></div>
+            </div>
+          </li>
+        </ul>
+        <div class="block-info" style="display: none;"><span class="line-numbers">444-454</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h2 lo="456" lf="456"><a name="rlc-and-ac-circuits" number="4.26" lo="456" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">456</span></div>
       </div>
     </div>
   </div>
