--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414">
+            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414" class="highlighted">
               <span class="toctext">Magnetic Flux</span>
             </a>
           </li>
@@ -722,7 +722,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#rl-circuits" raw="## RL Circuits" lo="442" class="highlighted">
+            <a href="#rl-circuits" raw="## RL Circuits" lo="442" class="">
               <span class="toctext">RL Circuits</span>
             </a>
           </li>
@@ -2004,7 +2004,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="414" lf="414"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
+        <h2 lo="414" lf="414" class="highlighted"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor active" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">414</span></div>
       </div>
       <div class="block">
@@ -2072,21 +2072,21 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="442" lf="442" class="highlighted"><a name="rl-circuits" number="4.25" lo="442" raw="## RL Circuits" class="anchor hanchor" href="#rl-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RL Circuits</span></a></h2>
+        <h2 lo="442" lf="442" class=""><a name="rl-circuits" number="4.25" lo="442" raw="## RL Circuits" class="anchor hanchor" href="#rl-circuits"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RL Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">442</span></div>
       </div>
       <div class="block">
         <ul lo="444" lf="454" class="compact">
-          <li markerlength="2" padlength="0" lo="444" lf="449" class="">
+          <li markerlength="2" padlength="0" lo="444" lf="449">
             <div class="block">
-              <p padlength="0" lo="444" lf="444" class="">Activity - RL Charging and Discharging</p>
+              <p padlength="0" lo="444" lf="444">Activity - RL Charging and Discharging</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">444</span></div>
             </div>
             <div class="block">
               <ul lo="445" lf="449" class="compact">
-                <li markerlength="2" padlength="0" lo="445" lf="449" class="">
+                <li markerlength="2" padlength="0" lo="445" lf="449">
                   <div class="block">
-                    <p padlength="0" lo="445" lf="449" class="">Documents: | <a href="RL_Circuits/RL_Circuits.pdf">pdf</a> | <a href="RL_Circuits/RL_Circuits-solutions.pdf">pdf solns</a> | <a href="RL_Circuits/RL_Circuits.html">html</a> |</p>
+                    <p padlength="0" lo="445" lf="449">Documents: | <a href="RL_Circuits/RL_Circuits.pdf">pdf</a> | <a href="RL_Circuits/RL_Circuits-solutions.pdf">pdf solns</a> | <a href="RL_Circuits/RL_Circuits.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">445-449</span></div>
                   </div>
                 </li>
@@ -2094,9 +2094,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">445-449</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="450" lf="454" class="">
+          <li markerlength="2" padlength="0" lo="450" lf="456">
             <div class="block">
-              <p padlength="0" lo="450" lf="454" class="active">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RL_Circuits">Github</a> | <a href="RL_Circuits/RL_Circuits.md">Markdown</a> | </p>
+              <p padlength="0" lo="450" lf="454" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RL_Circuits">Github</a> | <a href="RL_Circuits/RL_Circuits.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">450-454</span></div>
             </div>
           </li>
